; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/ole32/extr_stg_prop.c_PropertyStorage_PropertiesWriter.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/ole32/extr_stg_prop.c_PropertyStorage_PropertiesWriter.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.PropertyClosure = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*, i8*, i8*)* @PropertyStorage_PropertiesWriter to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @PropertyStorage_PropertiesWriter(i8* %0, i8* %1, i8* %2, i8* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca %struct.PropertyClosure*, align 8
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  store i8* %3, i8** %8, align 8
  %11 = load i8*, i8** %7, align 8
  %12 = bitcast i8* %11 to i32*
  store i32* %12, i32** %9, align 8
  %13 = load i8*, i8** %8, align 8
  %14 = bitcast i8* %13 to %struct.PropertyClosure*
  store %struct.PropertyClosure* %14, %struct.PropertyClosure** %10, align 8
  %15 = load i8*, i8** %5, align 8
  %16 = call i32 @assert(i8* %15)
  %17 = load i8*, i8** %6, align 8
  %18 = call i32 @assert(i8* %17)
  %19 = load i8*, i8** %7, align 8
  %20 = call i32 @assert(i8* %19)
  %21 = load i8*, i8** %8, align 8
  %22 = call i32 @assert(i8* %21)
  %23 = load i32*, i32** %9, align 8
  %24 = load %struct.PropertyClosure*, %struct.PropertyClosure** %10, align 8
  %25 = getelementptr inbounds %struct.PropertyClosure, %struct.PropertyClosure* %24, i32 0, i32 2
  %26 = load i32, i32* %25, align 4
  %27 = add nsw i32 %26, 1
  store i32 %27, i32* %25, align 4
  %28 = load i8*, i8** %5, align 8
  %29 = call i32 @PtrToUlong(i8* %28)
  %30 = load i8*, i8** %6, align 8
  %31 = load %struct.PropertyClosure*, %struct.PropertyClosure** %10, align 8
  %32 = getelementptr inbounds %struct.PropertyClosure, %struct.PropertyClosure* %31, i32 0, i32 1
  %33 = load i32, i32* %32, align 4
  %34 = call i32 @PropertyStorage_WritePropertyToStream(i32* %23, i32 %26, i32 %29, i8* %30, i32 %33)
  %35 = load %struct.PropertyClosure*, %struct.PropertyClosure** %10, align 8
  %36 = getelementptr inbounds %struct.PropertyClosure, %struct.PropertyClosure* %35, i32 0, i32 0
  store i32 %34, i32* %36, align 4
  %37 = load %struct.PropertyClosure*, %struct.PropertyClosure** %10, align 8
  %38 = getelementptr inbounds %struct.PropertyClosure, %struct.PropertyClosure* %37, i32 0, i32 0
  %39 = load i32, i32* %38, align 4
  %40 = call i32 @SUCCEEDED(i32 %39)
  ret i32 %40
}

declare dso_local i32 @assert(i8*) #1

declare dso_local i32 @PropertyStorage_WritePropertyToStream(i32*, i32, i32, i8*, i32) #1

declare dso_local i32 @PtrToUlong(i8*) #1

declare dso_local i32 @SUCCEEDED(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
